--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -107,12 +107,14 @@ nav ul {
 
 
 }
+
 .section-title {
-font-size: 35px;
-font-weight: bold;
-color: #181818;
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
 
 }
+
 .section-description {
     font-size: 18px;
     font-weight: regular;
@@ -120,33 +122,64 @@ color: #181818;
 
 
 }
-.secondary-bg{
-background-color: #fff8f3;
+
+.secondary-bg {
+    background-color: #fff8f3;
 
 
 
 }
-.about{
-border-radius: 10px;
-text-align: center;
-padding: 130px 150px ;
-margin-top: 155px;
+
+.about {
+    border-radius: 10px;
+    text-align: center;
+    padding: 130px 150px;
+    margin-top: 155px;
 
 }
-main{
 
-max-width: 1140px;
-margin: 0 auto;
+main {
 
-}
-.item-description{
-font-weight: 600;
-
-
+    max-width: 1140px;
+    margin: 0 auto;
 
 }
-.about-items{
-display: flex;
-justify-content: space-around;
+
+.itm-description {
+    font-weight: 600;
+
+
+
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.text-edit {
+    text-align: center;
+
+}
+
+.skills-container {
+    display: flex;
+
+
+}
+
+.skill {
+    width: 267px;
+    height: 330px;
+    margin: 24px;
+    background-color: #FFFFFF;
+    padding: 104px 33px 30px 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+} 
+main section{
+margin-top:130px ;
+margin-bottom: 130px;
 
 }
